examples/test/testpolicy15188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15188
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key18: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value2
      podSelector:
        matchLabels:
          key25: value44
          key37: value32
          key30: value25
